Switched to lumen

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.4.*",
+        "laravel/lumen-framework": "5.4.*",
         "optimus/distributed-laravel": "~0.1",
         "optimus/bruno": "~2.0",
         "optimus/genie": "~1.0",
