--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/passport": "^2.0",
         "optimus/api-consumer": "0.2.*",
         "monolog/monolog": "^1.22",
-        "league/flysystem": "^1.0"
+        "league/flysystem": "^1.0",
+        "brozot/laravel-fcm": "^1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
