--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "optimus/api-consumer": "0.2.*",
         "monolog/monolog": "^1.22",
         "league/flysystem": "^1.0",
-        "brozot/laravel-fcm": "^1.2"
+        "brozot/laravel-fcm": "^1.2",
+        "alexpechkarev/google-maps": "1.0.7"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
